Fixed disconnect button alignment

--- a/src/web/assets/analytics/src/css/settings.pcss
+++ b/src/web/assets/analytics/src/css/settings.pcss
@@ -8,6 +8,7 @@
 
         .account-box {
             display: flex;
+            align-items: center;
 
             .image {
                 margin-right: 14px;
@@ -21,10 +22,7 @@
             }
 
             .buttons {
-                margin-top: 14px;
-                margin-left: 24px;
-                margin-right: 3px;
-                min-height: auto;
+                margin: 0 3px 0 24px;
             }
         }
     }
